[tool.poetry]
name = "fastapi-chatgpt"
version = "0.1.0"
description = ""
authors = ["jujumilk3 <jujumilk3@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_chatgpt"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
